Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ steps:
 - task: DownloadSecureFile@1
   displayName: 'Download secure file'
   inputs:
-    secureFile: '1ed2758d-9812-4322-9de3-ee5cdd989ab4'
+    secureFile: 'settings.xml'
 
 - task: CopyFiles@2
   displayName: 'Copy Files to: $(system.defaultworkingdirectory)'
@@ -31,6 +31,7 @@ steps:
     command: package
     chartPath: 'charts/spring-boot-websocket-chat-demo'
     chartVersion: '$(build.BuildId)'
+    destination: $(system.defaultworkingdirectory)
 
 - task: CopyFiles@2
   displayName: 'copy helm chart'
