--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -61,12 +61,16 @@ jobs:
         run: |
           # run check for idempotent pipeline
           vnetSubnetCheck=$(az network vnet subnet list -g $resourceGroup --vnet-name $vnetName -o tsv --query '[1].name')
-          if [[  $vnetSubnetCheck == *$subnetName* ]]; then
+
+          vnodeSubnet="${subnetName}Vnode"
+          echo "::set-env vnodeSubnet='${subnetName}Vnode'"
+
+          if [[  $vnetSubnetCheck == *$vnodeSubnet* ]]; then
             echo 'Virtual node subnet already exists'
           else
             echo 'Virtual node subnet does not exist. Creating virtual subnet now.'
             # configure vnet subnet
-            az network vnet subnet create --resource-group $resourceGroup --subscription "$subName" --vnet-name $vnetName --name $subnetName --address-prefix 10.241.0.0/16 
+            az network vnet subnet create --resource-group $resourceGroup --subscription "$subName" --vnet-name $vnetName --name $vnodeSubnet --address-prefix 10.241.0.0/16 
           fi
       # Deploy ACR
       - name: "Create Azure Container Registry"
@@ -84,7 +88,7 @@ jobs:
           --name $aksName \
           --node-count 3 \
           --service-principal $clientId \
-          --client-secret $clientSecret \
+          --client-secret ${{ SECRETS.clientSecret }} \
           --attach-acr $aksName
           --generate-ssh-keys \
           --network-plugin azure \
@@ -112,7 +116,7 @@ jobs:
             --resource-group $resourceGroup  \
             --name $AKS_CLUSTER \
             --addons virtual-node \
-            --subnet-name VNSubnet
+            --subnet-name $vnodeSubnet
           fi
 
       - name: "Create keda namespace"
