--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -44,6 +44,7 @@ jobs:
       - name: "Create Resource Group"
         run: |
           az group create --subscription "$subName" --name $resourceGroup --location $location --tags Tracking=$SESSION_CODE CreatedBy=$USER_ID
+
       # create VNet
       - name: "Create Virtual Network"
         run: |
@@ -58,18 +59,18 @@ jobs:
           fi
 
       # create virtual node subnet
-      - name: "Create Virtual Node Subnet"
-        run: |
-          # run check for idempotent pipeline
-          vnetSubnetCheck=$(az network vnet subnet list -g $resourceGroup --vnet-name $vnetName -o tsv --query '[1].name')
+      # - name: "Create Virtual Node Subnet"
+      #   run: |
+      #     # run check for idempotent pipeline
+      #     vnetSubnetCheck=$(az network vnet subnet list -g $resourceGroup --vnet-name $vnetName -o tsv --query '[1].name')
 
-          if [[  $vnetSubnetCheck == *$vnodeSubnetName* ]]; then
-            echo 'Virtual node subnet already exists'
-          else
-            echo 'Virtual node subnet does not exist. Creating virtual subnet now.'
-            # configure vnet subnet
-            az network vnet subnet create --resource-group $resourceGroup --subscription "$subName" --vnet-name $vnetName --name $vnodeSubnetName --address-prefix 10.241.0.0/16
-          fi
+      #     if [[  $vnetSubnetCheck == *$vnodeSubnetName* ]]; then
+      #       echo 'Virtual node subnet already exists'
+      #     else
+      #       echo 'Virtual node subnet does not exist. Creating virtual subnet now.'
+      #       # configure vnet subnet
+      #       az network vnet subnet create --resource-group $resourceGroup --subscription "$subName" --vnet-name $vnetName --name $vnodeSubnetName --address-prefix 10.241.0.0/16
+      #     fi
 
       # Deploy ACR
       - name: "Create Azure Container Registry"
@@ -111,20 +112,20 @@ jobs:
           AKS_CLUSTER=$(az aks list --resource-group $resourceGroup --query [0].name -o tsv)
           az aks get-credentials --name $AKS_CLUSTER --resource-group $resourceGroup --admin --overwrite-existing
 
-      # Setup virutal node
-      - name: "Install Virtual Node on K8s cluster"
-        run: |
-          vNodeEnabledCheck=$(az aks show --resource-group $resourceGroup --name $AKS_CLUSTER --query addonProfiles.aciConnectorLinux.enabled -o tsv)
-          if [[ $vNodeEnabledCheck == *true*  ]]; then
-            echo "AKS Virtual Node add-on already enabled."
-          else
-            # Deploy virtual node 
-            az aks enable-addons \
-            --resource-group $resourceGroup  \
-            --name $AKS_CLUSTER \
-            --addons virtual-node \
-            --subnet-name $vnodeSubnet
-          fi
+      # # Setup virutal node
+      # - name: "Install Virtual Node on K8s cluster"
+      #   run: |
+      #     vNodeEnabledCheck=$(az aks show --resource-group $resourceGroup --name $AKS_CLUSTER --query addonProfiles.aciConnectorLinux.enabled -o tsv)
+      #     if [[ $vNodeEnabledCheck == *true*  ]]; then
+      #       echo "AKS Virtual Node add-on already enabled."
+      #     else
+      #       # Deploy virtual node
+      #       az aks enable-addons \
+      #       --resource-group $resourceGroup  \
+      #       --name $AKS_CLUSTER \
+      #       --addons virtual-node \
+      #       --subnet-name $vnodeSubnet
+      #     fi
 
       - name: "Create keda namespace"
         env:
