--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -203,7 +203,7 @@ stages:
               chartType: 'FilePath'
               chartPath: '$(System.ArtifactsDirectory)/charts/spring-boot-websocket-chat-demo-v0.1.0.tgz'
               releaseName: 'azdspring-dev'
-              overrideValues: 'image.repository=jfrogjd-docker.jfrog.io/jldeen/spring-boot-websocket-chat-demo,image.tag=$(Build.BuildId),ingress.hostname=dev-swampup19.k8s.az.jessicadeen.com,buildID=$(Build.BuildId)'
+              overrideValues: 'image.repository=jfrogjd-docker.jfrog.io/jldeen/spring-boot-websocket-chat-demo,image.tag=$(Build.BuildId),ingress.hostname=azdspring20-dev.k8s.az.jessicadeen.com,buildID=$(Build.BuildId)'
 
 - stage: PromoteToProd
   displayName: Promote to Prod
@@ -238,7 +238,6 @@ stages:
               kubectlVersion: '1.17.1'
 
           - task: HelmDeploy@0
-            displayName: 'helm upgrade'
             inputs:
               connectionType: 'Azure Resource Manager'
               azureSubscription: 'ca-jessde-demo-test(dfb5d696-98d8-447c-a14d-56f131f3c4a5)'
@@ -249,4 +248,4 @@ stages:
               chartType: 'FilePath'
               chartPath: '$(System.ArtifactsDirectory)/charts/spring-boot-websocket-chat-demo-v0.1.0.tgz'
               releaseName: 'azdspring-prod'
-              overrideValues: 'image.repository=jfrogjd-docker.jfrog.io/jldeen/spring-boot-websocket-chat-demo,image.tag=$(Build.BuildId),buildID=$(Build.BuildId)'
+              overrideValues: 'image.repository=jfrogjd-docker.jfrog.io/jldeen/spring-boot-websocket-chat-demo,image.tag=$(Build.BuildId),ingress.hostname=azdspring20-dev.k8s.az.jessicadeen.com,buildID=$(Build.BuildId)'
