--- a/charts/spring-boot-websocket-chat-demo/values.yaml
+++ b/charts/spring-boot-websocket-chat-demo/values.yaml
@@ -23,7 +23,7 @@ ingress:
   annotations:
     #  kubernetes.io/ingress.class: nginx
      kubernetes.io/ingress.class: addon-http-application-routing
-     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
+     cert-manager.io/issuer: letsencrypt-prod
      kubernetes.io/tls-acme: "true"
   tls: true
 applicationInsights:
