--- a/IaC/cluster-issuer.yaml
+++ b/IaC/cluster-issuer.yaml
@@ -5,8 +5,12 @@ metadata:
 spec:
   acme:
     email: jessde@microsoft.com
-    http01: {}
     privateKeySecretRef:
       key: ""
       name: letsencrypt-prod
     server: https://acme-v02.api.letsencrypt.org/directory
+    # Enable the HTTP-01 challenge provider
+    solvers:
+      - http01:
+          ingress:
+            class: nginx
