--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -147,7 +147,7 @@ jobs:
             name: $nameSpace
           type: kubernetes.io/dockercfg
           data:
-            .dockercfg: {{printf "{\"%s\":{\"username\":\"%s\",\"password\":\"%s\",\"email\":\"%s\"}}" $repository .$username ${{ secrets.REGISTRY_PASSWORD }} $email | b64enc -}}
+            .dockercfg: {{printf "{\"%s\":{\"username\":\"%s\",\"password\":\"%s\",\"email\":\"%s\"}}" $repository $username ${{ secrets.REGISTRY_PASSWORD }} $email | b64enc -}}
 
       - name: "Create jfrog-prod namespace/secret"
         env:
