--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -148,6 +148,7 @@ jobs:
           type: kubernetes.io/dockercfg
           data:
             .dockercfg: {{printf "{\"%s\":{\"username\":\"%s\",\"password\":\"%s\",\"email\":\"%s\"}}" $repository $username ${{ secrets.REGISTRY_PASSWORD }} $email | b64enc -}}
+          EOF
 
       - name: "Create jfrog-prod namespace/secret"
         env:
@@ -173,6 +174,7 @@ jobs:
           type: kubernetes.io/dockercfg
           data:
             .dockercfg: {{printf "{\"%s\":{\"username\":\"%s\",\"password\":\"%s\",\"email\":\"%s\"}}" $repository $username ${{ secrets.REGISTRY_PASSWORD }} $email | b64enc -}}
+          EOF
 
       - name: "Create keda namespace"
         env:
