--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -128,9 +128,6 @@ jobs:
         env:
           secretName: jdk8s
           nameSpace: jfrog
-          repository: jfrogjd-docker.jfrog.io
-          username: admin
-          email: ServicePrincipal@AzureRM
         run: |
           # jfrog dev namespace
           cat <<EOF | kubectl apply -f -
@@ -146,16 +143,13 @@ jobs:
             namespace: $nameSpace
           type: kubernetes.io/dockercfg
           data:
-            .dockercfg: {{printf "{\"%s\":{\"username\":\"%s\",\"password\":\"%s\",\"email\":\"%s\"}}" $repository $username ${{ secrets.REGISTRY_PASSWORD }} $email | b64enc -}}
+            .dockercfg: ${{ secrets.DOCKER_CFG }}
           EOF
 
       - name: "Create jfrog-prod namespace/secret"
         env:
           secretName: jdk8s
           nameSpace: jfrog-prod
-          repository: jfrogjd-docker.jfrog.io
-          username: admin
-          email: ServicePrincipal@AzureRM
         run: |
           # jfrog prod namespace
           cat <<EOF | kubectl apply -f -
@@ -171,7 +165,7 @@ jobs:
             namespace: $nameSpace
           type: kubernetes.io/dockercfg
           data:
-            .dockercfg: {{printf "{\"%s\":{\"username\":\"%s\",\"password\":\"%s\",\"email\":\"%s\"}}" $repository $username ${{ secrets.REGISTRY_PASSWORD }} $email | b64enc -}}
+            .dockercfg: ${{ secrets.DOCKER_CFG }}
           EOF
 
       - name: "Create keda namespace"
