--- a/IaC/cluster-issuer.yaml
+++ b/IaC/cluster-issuer.yaml
@@ -1,7 +1,8 @@
 apiVersion: cert-manager.io/v1alpha2
-kind: Issuer
+kind: ClusterIssuer
 metadata:
   name: letsencrypt-prod
+  namespace: cert-manager
 spec:
   acme:
     email: jessde@microsoft.com
