--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -163,9 +163,9 @@ jobs:
           metadata:
             name: $secretName
             namespace: $nameSpace
-          type: kubernetes.io/dockercfg
+          type:  kubernetes.io/dockerconfigjson
           data:
-            .dockercfg: ${{ secrets.DOCKER_CFG }}
+            .dockercfgjson: ${{ secrets.DOCKER_CFG }}
           EOF
 
       - name: "Create keda namespace"
