--- a/IaC/cluster-issuer.yaml
+++ b/IaC/cluster-issuer.yaml
@@ -6,12 +6,13 @@ metadata:
 spec:
   acme:
     email: jessde@microsoft.com
+    http01: {}
     privateKeySecretRef:
       key: ""
       name: letsencrypt-prod
     server: https://acme-v02.api.letsencrypt.org/directory
-    # Enable the HTTP-01 challenge provider
-    solvers:
-      - http01:
-          ingress:
-            class: nginx
+    # # Enable the HTTP-01 challenge provider
+    # solvers:
+    #   - http01:
+    #       ingress:
+    #         class: nginx
