--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -143,7 +143,7 @@ jobs:
             namespace: $nameSpace
           type:  kubernetes.io/dockerconfigjson
           data:
-            .dockercfgjson: ${{ secrets.DOCKER_CFG }}
+            .dockerconfigjson: ${{ secrets.DOCKER_CFG }}
           EOF
 
       - name: "Create jfrog-prod namespace/secret"
@@ -165,7 +165,7 @@ jobs:
             namespace: $nameSpace
           type:  kubernetes.io/dockerconfigjson
           data:
-            .dockercfgjson: ${{ secrets.DOCKER_CFG }}
+            .dockerconfigjson: ${{ secrets.DOCKER_CFG }}
           EOF
 
       - name: "Create keda namespace"
